# rigidRL

./: .gitignore  README.md  build_debug.md  setup.py  test_ops.py
diff_sim_core/: CMakeLists.txt
diff_sim_core/include/: activations.h  core.h  env.h
diff_sim_core/include/engine/: body.h  contact.h  engine.h  tensor.h
diff_sim_core/include/renderer/: renderer.h  sdl_renderer.h
diff_sim_core/src/: activations.cpp  bindings.cpp  core.cpp  optimizers.cpp
diff_sim_core/src/engine/: body.cpp  contact.cpp  engine.cpp  tensor.cpp
diff_sim_core/src/renderer/: sdl_renderer.cpp
docs/: WINDOWS_SETUP.md  foragents.md  physics_engine_docs.md  roadmap.md
examples/: cartpole.py  debug_test.py  demo_rl_training.py  drone.py  falling_box_visual.py  impulse_test.py  multi_test.py  projectile.py  rotation_test.py  slope_test.py  stacking_test.py  stress_test.py  test_circle_collision.py  test_triangle_collision.py  train_drone.py  train_drone_sb3.py  vshape_test.py
logs/PPO_1/: events.out.tfevents.1765995921.Victus.10780.0
logs/PPO_2/: events.out.tfevents.1765996101.Victus.11912.0
logs/PPO_3/: events.out.tfevents.1765996828.Victus.22776.0
rigidrl_py/: __init__.py
rigidrl_py/configs/: __init__.py
rigidrl_py/configs/defaults/: drone.yaml
rigidrl_py/envs/: drone_env.py  vec_env.py
rigidrl_py/rl/: __init__.py  policy.py  reinforce.py
